made sure that front + backend is connected -Nanu

--- a/backend/codebase/src/main/resources/application.properties
+++ b/backend/codebase/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://${UMS_DB_IP:localhost}:${UMS_DB_PORT:3306}/${UMS_DB_NAME:ums}
+spring.datasource.url=jdbc:mariadb://${UMS_DB_IP:localhost}:${UMS_DB_PORT:3306}/${UMS_DB_NAME:toctik}
 spring.datasource.username=${UMS_DB_USERNAME:dev}
 spring.datasource.password=${UMS_DB_PASSWORD:devpass}
 
 # Redis
-spring.data.redis.host=${REDIS_HOST:redis} 
-spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 
 # Session Management
 spring.session.store-type=redis
