--- a/frontend/codebase/package.json
+++ b/frontend/codebase/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "@mdi/js": "^7.4.47",
     "axios": "^1.9.0",
     "roboto-fontface": "*",
     "vite-plugin-pages": "^0.33.0",
