--- a/video-service/src/main/resources/application.properties
+++ b/video-service/src/main/resources/application.properties
@@ -7,3 +7,10 @@ cloudflare.r2.secret-key=900d123036610ff4fe1f2dd8ce6a78ac2d8263c9b470f5dbf9da432
 cloudflare.r2.bucket-name=toktikp2
 
 server.port=8081
+
+# Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# Session Management
+spring.session.store-type=redis
