added in service logic for saving metadata - Nanu

--- a/video-service/src/main/resources/application.properties
+++ b/video-service/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.data.redis.port=6379
 
 # Session Management
 spring.session.store-type=redis
+
+# Database
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mariadb://${VMS_DB_IP:localhost}:${VMS_DB_PORT:3306}/${VMS_DB_NAME:toktik_videos}
+spring.datasource.username=${VMS_DB_USERNAME:dev}
+spring.datasource.password=${VMS_DB_PASSWORD:devpass}
