got backend to save metadata

--- a/video-service/src/main/resources/application.properties
+++ b/video-service/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.session.store-type=redis
 
 # Database
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://${VMS_DB_IP:localhost}:${VMS_DB_PORT:3306}/${VMS_DB_NAME:toktik_videos}
-spring.datasource.username=${VMS_DB_USERNAME:dev}
-spring.datasource.password=${VMS_DB_PASSWORD:devpass}
+spring.datasource.url=jdbc:mariadb://${UMS_DB_IP:localhost}:${UMS_DB_PORT:3306}/${UMS_DB_NAME:toctik}
+spring.datasource.username=${UMS_DB_USERNAME:dev}
+spring.datasource.password=${UMS_DB_PASSWORD:devpass}
