--- a/video_processing_service/Dockerfile
+++ b/video_processing_service/Dockerfile
@@ -5,6 +5,6 @@ RUN apt-get update && apt-get install -y ffmpeg
 WORKDIR /app
 COPY . /app
 
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
