--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
       timeout: 5s
       retries: 30
       start_period: 15s
+    networks:
+      - redis_network
 
   redis:
     image: redis:latest
@@ -47,9 +49,36 @@ services:
       - S3_REGION=${S3_REGION}
       - CELERY_BROKER_URL=${CELERY_BROKER_URL}
       - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
+      - DOCKER_ENV=true
+    networks:
+      - redis_network
+
+  celery-worker:
+    build:
+      context: ./video_processing_service
+    container_name: celery-worker
+    command: celery -A app.tasks worker --pool=solo --loglevel=INFO -E
+    user: "1000:1000"
+    volumes:
+      - ./video_processing_service:/app
+    depends_on:
+      - redis
+    environment:
+      - S3_ENDPOINT_URL=${S3_ENDPOINT_URL}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET=${S3_BUCKET}
+      - S3_REGION=${S3_REGION}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
+      - DOCKER_ENV=true
+      - TZ=Asia/Bangkok
+    networks:
+      - redis_network
 
 networks:
   redis_network:
+    driver: bridge
 
 volumes:
   db_data:
