--- a/video_processing_service/Dockerfile
+++ b/video_processing_service/Dockerfile
@@ -1,10 +1,19 @@
 FROM python:3.10-slim
 
-RUN apt-get update && apt-get install -y ffmpeg
+RUN useradd -m -u 1000 appuser && \
+    apt-get update && apt-get install -y \
+    ffmpeg \
+    redis-tools \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-COPY . /app
 
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
+
+RUN chown -R appuser:appuser /app
+USER appuser
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
