--- a/video_processing_service/Dockerfile
+++ b/video_processing_service/Dockerfile
@@ -2,9 +2,17 @@ FROM python:3.10-slim
 
 RUN useradd -m -u 1000 appuser && \
     apt-get update && apt-get install -y \
-    ffmpeg \
+    wget \
+    xz-utils \
     redis-tools \
     && rm -rf /var/lib/apt/lists/*
+
+# Install latest FFmpeg static build
+RUN wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz && \
+    tar -xJf ffmpeg-release-amd64-static.tar.xz && \
+    mv ffmpeg-*-amd64-static/ffmpeg /usr/local/bin/ && \
+    mv ffmpeg-*-amd64-static/ffprobe /usr/local/bin/ && \
+    rm -rf ffmpeg-*-amd64-static*
 
 WORKDIR /app
 
