docker-compose for the separated workers that i forgot to add

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,7 @@ services:
   video-processing-service:
     build:
       context: ./video_processing_service
+      dockerfile: Dockerfile
     container_name: video-processing-service
     ports:
       - "8002:80"
@@ -53,16 +54,68 @@ services:
     networks:
       - redis_network
 
-  celery-worker:
+  convert-worker:
     build:
       context: ./video_processing_service
-    container_name: celery-worker
-    command: celery -A app.tasks worker --pool=solo --loglevel=INFO -E
+      dockerfile: Dockerfile_convert
+    container_name: convert-worker
+    command: ["celery", "-A", "app.convert", "worker", "--pool=solo", "--loglevel=INFO", "-E"]
     user: "1000:1000"
     volumes:
       - ./video_processing_service:/app
     depends_on:
       - redis
+      - video-processing-service
+    environment:
+      - S3_ENDPOINT_URL=${S3_ENDPOINT_URL}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET=${S3_BUCKET}
+      - S3_REGION=${S3_REGION}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
+      - DOCKER_ENV=true
+      - TZ=Asia/Bangkok
+    networks:
+      - redis_network
+
+  chunking-worker:
+    build:
+      context: ./video_processing_service
+      dockerfile: Dockerfile_chunking
+    container_name: chunking-worker
+    command: ["celery", "-A", "app.chunking", "worker", "--pool=solo", "--loglevel=INFO", "-E"]
+    user: "1000:1000"
+    volumes:
+      - ./video_processing_service:/app
+    depends_on:
+      - redis
+      - video-processing-service
+    environment:
+      - S3_ENDPOINT_URL=${S3_ENDPOINT_URL}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET=${S3_BUCKET}
+      - S3_REGION=${S3_REGION}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
+      - DOCKER_ENV=true
+      - TZ=Asia/Bangkok
+    networks:
+      - redis_network
+
+  thumbnail-worker:
+    build:
+      context: ./video_processing_service
+      dockerfile: Dockerfile_thumbnail
+    container_name: thumbnail-worker
+    command: ["celery", "-A", "app.thumbnail", "worker", "--pool=solo", "--loglevel=INFO", "-E"]
+    user: "1000:1000"
+    volumes:
+      - ./video_processing_service:/app
+    depends_on:
+      - redis
+      - video-processing-service
     environment:
       - S3_ENDPOINT_URL=${S3_ENDPOINT_URL}
       - S3_ACCESS_KEY=${S3_ACCESS_KEY}
