--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,6 +51,7 @@ services:
       - CELERY_BROKER_URL=${CELERY_BROKER_URL}
       - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
       - DOCKER_ENV=true
+      - TZ=Asia/Bangkok
     networks:
       - redis_network
 
@@ -73,6 +74,7 @@ services:
       - CELERY_BROKER_URL=${CELERY_BROKER_URL}
       - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
       - DOCKER_ENV=true
+      - TZ=Asia/Bangkok
     networks:
       - redis_network
 
