--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,7 +60,7 @@ services:
       context: ./video_processing_service
       dockerfile: Dockerfile
     container_name: video-processing-worker
-    command: [ "celery", "-A", "app.tasks", "worker", "--pool=solo", "--loglevel=INFO", "-E" ]
+    command: [ "celery", "-A", "tasks", "worker", "--pool=solo", "--loglevel=INFO", "-E", "-Q", "video_processing_queue" ]
     volumes:
       - ./video_processing_service:/app
     depends_on:
@@ -83,13 +83,11 @@ services:
       context: ./convert_service
       dockerfile: Dockerfile_convert
     container_name: convert-worker
-    command: ["celery", "-A", "app.convert", "worker", "--pool=solo", "--loglevel=INFO", "-E"]
-    user: "1000:1000"
+    command: [ "celery", "-A", "app.convert", "worker", "--pool=solo", "--loglevel=INFO", "-E", "-Q", "convert_queue" ]
     volumes:
       - ./convert_service:/app
     depends_on:
       - redis
-      - video-processing-service
     environment:
       - S3_ENDPOINT_URL=${S3_ENDPOINT_URL}
       - S3_ACCESS_KEY=${S3_ACCESS_KEY}
