--- a/video-service/pom.xml
+++ b/video-service/pom.xml
@@ -63,6 +63,16 @@
 			<artifactId>s3</artifactId>
 			<version>2.26.0</version>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>5.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>5.1.5</version>
+		</dependency>
 
 	</dependencies>
 
