--- a/video-service/pom.xml
+++ b/video-service/pom.xml
@@ -74,6 +74,23 @@
 			<version>5.1.5</version>
 		</dependency>
 
+		<!--for redis pub/sub communication -->
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+			<version>6.6.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
