--- a/video-service/pom.xml
+++ b/video-service/pom.xml
@@ -91,6 +91,11 @@
 			<artifactId>spring-data-redis</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
