--- a/video-service/pom.xml
+++ b/video-service/pom.xml
@@ -96,6 +96,11 @@
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
