--- a/frontend/codebase/package.json
+++ b/frontend/codebase/package.json
@@ -15,6 +15,7 @@
     "@mdi/font": "7.4.47",
     "@mdi/js": "^7.4.47",
     "axios": "^1.9.0",
+    "hls.js": "^1.6.5",
     "roboto-fontface": "*",
     "vite-plugin-pages": "^0.33.0",
     "vue": "^3.5.13",
