--- a/k8s/frontend-deploy.yaml
+++ b/k8s/frontend-deploy.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ums-frontend
+  name: frontend
   labels:
-    app: ums-frontend
+    app: frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ums-frontend
+      app: frontend
   template:
     metadata:
       labels:
-        app: ums-frontend
+        app: frontend
     spec:
       containers:
         - name: frontend
-          image: ghcr.io/bipasapradhan/ums-frontend:latest
+          image: ghcr.io/bipasapradhan/frontend-toctik:latest
           ports:
             - containerPort: 8080
       imagePullSecrets:
