--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -1,10 +1,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: ums-frontend
+  name: frontend
 spec:
   selector:
-    app: ums-frontend
+    app: frontend
   type: ClusterIP
   ports:
     - name: http
