--- a/k8s/mariadb-deploy.yaml
+++ b/k8s/mariadb-deploy.yaml
@@ -29,7 +29,7 @@ spec:
                   name: mariadb-secret
                   key: UMS_DB_PASSWORD
             - name: MYSQL_DATABASE
-              value: "ums"
+              value: "toctik"
             - name: MYSQL_USER
               value: "dev"
           ports:
