--- a/k8s/user-authentication-service-deploy.yaml
+++ b/k8s/user-authentication-service-deploy.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ums-backend
+  name: user-authentication-service
   labels:
-    app: ums-backend
+    app: user-authentication-service
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: ums-backend
+      app: user-authentication-service
   template:
     metadata:
       labels:
-        app: ums-backend
+        app: user-authentication-service
     spec:
       imagePullSecrets:
         - name: ghcr-secret
       containers:
         - name: backend
-          image: ghcr.io/bipasapradhan/ums-backend:latest
+          image: ghcr.io/bipasapradhan/user-authentication-service:latest
           ports:
             - containerPort: 8080
           env:
@@ -32,7 +32,7 @@ spec:
                   name: mariadb-secret
                   key: UMS_DB_PASSWORD
             - name: UMS_DB_NAME
-              value: "ums"
+              value: "toctik"
             - name: UMS_DB_USERNAME
               value: "dev"
             - name: SPRING_DATA_REDIS_HOST
