--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -16,6 +16,13 @@ spec:
                 name: frontend
                 port:
                   number: 80
+          - path: /api/videos
+            pathType: Prefix
+            backend:
+              service:
+                name: video-service
+                port:
+                  number: 80
           - path: /api
             pathType: Prefix
             backend:
