starting to do deployment files for workers - Nanu

--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -39,3 +39,8 @@ jobs:
         run: |
           docker build -t ghcr.io/bipasapradhan/video-service:latest -f video-service/Dockerfile video-service/
           docker push ghcr.io/bipasapradhan/video-service:latest
+
+      - name: Build and Push Convert Service
+        run : |
+          docker build -t ghcr.io/bipasapradhan/convert-service:latest -f convert_service/Dockerfile_convert convert_service/
+          docker push ghcr.io/bipasapradhan/convert-service:latest
