--- a/frontend/codebase/package.json
+++ b/frontend/codebase/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "@mdi/js": "^7.4.47",
+    "@stomp/stompjs": "^7.1.1",
     "axios": "^1.9.0",
     "hls.js": "^1.6.5",
     "roboto-fontface": "*",
@@ -24,6 +25,8 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.23.0",
