--- a/video-service/src/main/resources/application.properties
+++ b/video-service/src/main/resources/application.properties
@@ -16,6 +16,5 @@ spring.datasource.username=${UMS_DB_USERNAME:dev}
 spring.datasource.password=${UMS_DB_PASSWORD:devpass}
 
 # Redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-
+spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
+spring.data.redis.port=${SPRING_REDIS_PORT:6379}
