--- a/thumbnail_service/Dockerfile_thumbnail
+++ b/thumbnail_service/Dockerfile_thumbnail
@@ -8,16 +8,14 @@ RUN useradd -m -u 1000 appuser && \
     && rm -rf /var/lib/apt/lists/*
 
 # Install latest FFmpeg static build
-RUN wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz && \
-    tar -xJf ffmpeg-release-amd64-static.tar.xz && \
-    mv ffmpeg-*-amd64-static/ffmpeg /usr/local/bin/ && \
-    mv ffmpeg-*-amd64-static/ffprobe /usr/local/bin/ && \
-    rm -rf ffmpeg-*-amd64-static*
+RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/**
 
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt
+
 
 COPY . .
 
