--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -30,3 +30,17 @@ spec:
                 name: user-authentication-service
                 port:
                   number: 80
+          - path: /api/process-video
+            pathType: Prefix
+            backend:
+              service:
+                name: video-processing-service
+                port:
+                  number: 80
+          - path: /api/reset-counter
+            pathType: Prefix
+            backend:
+              service:
+                name: video-processing-service
+                port:
+                  number: 80
