--- a/video_processing_service/Dockerfile
+++ b/video_processing_service/Dockerfile
@@ -18,7 +18,7 @@ RUN pip install --no-cache-dir --upgrade pip \
 
 COPY . .
 
-RUN chown -R appuser:appuser /app
+RUN mkdir -p /app/counter && chown -R appuser:appuser /app
 USER appuser
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
