--- a/k8s/counter-pv.yaml
+++ b/k8s/counter-pv.yaml
@@ -7,6 +7,7 @@ spec:
     storage: 1Mi
   accessModes:
     - ReadWriteOnce
+  storageClassName: ""
   hostPath:
     path: /mnt/data/counter
     type: DirectoryOrCreate
