--- a/k8s/video-processing-worker-deploy.yaml
+++ b/k8s/video-processing-worker-deploy.yaml
@@ -60,4 +60,4 @@ spec:
                   name: celery-secret
                   key: CELERY_RESULT_BACKEND
             - name: TZ
-              value: "Asia/Bangkok"
+              value: "UTC"
