--- a/k8s/thumbnail-service-deploy.yaml
+++ b/k8s/thumbnail-service-deploy.yaml
@@ -50,4 +50,4 @@ spec:
                   name: celery-secret
                   key: CELERY_RESULT_BACKEND
             - name: TZ
-              value: "Asia/Bangkok"
+              value: "UTC"
