reverted application.properties for proper start

--- a/video-service/src/main/resources/application.properties
+++ b/video-service/src/main/resources/application.properties
@@ -8,12 +8,13 @@ cloudflare.r2.bucket-name=toktikp2
 
 server.port=8081
 
+
 # Database
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mariadb://localhost:3306/toctik}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:dev}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:devpass}
+spring.datasource.url=jdbc:mariadb://${UMS_DB_IP:localhost}:${UMS_DB_PORT:3306}/${UMS_DB_NAME:toctik}
+spring.datasource.username=${UMS_DB_USERNAME:dev}
+spring.datasource.password=${UMS_DB_PASSWORD:devpass}
 
 # Redis
-spring.data.redis.host=${SPRING_REDIS_HOST:redis}
-spring.data.redis.port=${SPRING_REDIS_PORT:6379}
+spring.data.redis.host=redis
+spring.data.redis.port=6379
