--- a/frontend/codebase/package.json
+++ b/frontend/codebase/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.9.0",
     "hls.js": "^1.6.5",
     "roboto-fontface": "*",
+    "sweetalert2": "^11.22.0",
     "vite-plugin-pages": "^0.33.0",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
