redid thumbnail k8s error

--- a/k8s/thumbnail-service-deploy.yaml
+++ b/k8s/thumbnail-service-deploy.yaml
@@ -23,7 +23,7 @@ spec:
           args:
             [
               "-A",
-              "app.convert",
+              "app.thumbnail",
               "worker",
               "--pool=solo",
               "--loglevel=INFO",
