--- a/user-authentication-service/codebase/src/main/resources/application.properties
+++ b/user-authentication-service/codebase/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=${UMS_DB_USERNAME:dev}
 spring.datasource.password=${UMS_DB_PASSWORD:devpass}
 
 # Redis
-spring.data.redis.host=redis
+spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
 # JWT Config
