Added in comments

--- a/video-service/src/main/resources/application.properties
+++ b/video-service/src/main/resources/application.properties
@@ -11,9 +11,14 @@ server.port=8081
 
 # Database
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://${UMS_DB_IP:localhost}:${UMS_DB_PORT:3306}/${UMS_DB_NAME:toctik}
+spring.datasource.url=jdbc:mariadb://${UMS_DB_IP:localhost}:${UMS_DB_PORT:3306}/${UMS_DB_NAME:toctik}?characterEncoding=utf8mb4&connectionCollation=utf8mb4_unicode_ci
 spring.datasource.username=${UMS_DB_USERNAME:dev}
 spring.datasource.password=${UMS_DB_PASSWORD:devpass}
+
+# Hibernate
+spring.jpa.properties.hibernate.connection.characterEncoding=utf8mb4
+spring.jpa.properties.hibernate.connection.useUnicode=true
+spring.jpa.properties.hibernate.connection.CharSet=utf8mb4
 
 # Redis
 spring.data.redis.host=redis
