--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -178,6 +178,28 @@ services:
    networks:
      - redis_network
 
+  user-authentication-service:
+    build:
+      context: ./user-authentication-service
+      dockerfile: Dockerfile
+    container_name: user-authentication-service
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mariadb://maria-db:3306/toctik
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=rootpass
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
+      - SERVER_PORT=8080
+    depends_on:
+      maria-db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - redis_network
+
   websocket-service:
     build:
       context: ./web-socket 
