--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -59,3 +59,8 @@ jobs:
         run: |
           docker build -t ghcr.io/bipasapradhan/video-processing-service:latest -f video_processing_service/Dockerfile video_processing_service/
           docker push ghcr.io/bipasapradhan/video-processing-service:latest
+
+      - name: Build and Push Websocket Service
+        run: |
+          docker build -t ghcr.io/bipasapradhan/websocket-service:latest -f web-socket/Dockerfile web-socket/
+          docker push ghcr.io/bipasapradhan/websocket-service:latest
