--- a/k8s/user-authentication-service-deploy.yaml
+++ b/k8s/user-authentication-service-deploy.yaml
@@ -24,6 +24,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: ums-config
+            - configMapRef:
+                name: redis-config
             - secretRef:
                 name: jwt-secret
             - secretRef:
